--- a/style.css
+++ b/style.css
@@ -39,3 +39,12 @@ h1{
 .ftr a{
     text-decoration: none;
 }
+#preloader{
+    background:#000 url(https://ucarecdn.com/16f09229-1388-4dfb-a5b0-8dd44588e267/) no-repeat center center;
+    background-size: 30%;
+    background-color: black;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
